--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "css-loader": "^3.4.2",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
@@ -30,11 +32,13 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.4.1",
