--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-fc": "^0.41.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3"
   }
 }
