--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    "@babel/transform-runtime",
     "@babel/proposal-class-properties",
     "@babel/proposal-object-rest-spread"
   ]
