--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
@@ -33,6 +36,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
+    "@babel/runtime": "^7.9.6",
     "@types/classnames": "^2.2.10",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
@@ -40,12 +45,14 @@
     "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.8.0",
     "react": "^16.4.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.4.1",
     "react-fc": "^0.41.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3"
