--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   }
 }
