--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.4.2",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
+    "url-loader": "^4.1.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.10.3"
